# conclave

./: .gitleaks.toml  CHANGELOG.md  DOCUMENTATION_INDEX.md  README.md  RELEASING.md  SECURITY.md  SYSTEM_CONTEXT_DIAGRAM.md  config.example.yml  pyproject.toml
.github/workflows/: gitleaks.yml  release.yml  test.yml
docs/: PRODUCT_DESIGN_DOCUMENT.md
docs/archive/: pdd-v0.x-modes-detail.md
src/conclave/: __init__.py  agreement.py  cache.py  cli.py  config.py  council.py  manifest.py  models.py  modes.py  prompts.py  providers.py  registry.py  streaming.py  transport.py  verdict.py  verdict_synthesis.py
src/conclave/adapters/: __init__.py  anthropic.py  base.py  gemini.py  openai_compat.py
tests/: conftest.py  test_adapters.py  test_agreement.py  test_anthropic_structured.py  test_cache.py  test_cli.py  test_cli_verdict.py  test_council.py  test_council_verdict.py  test_gemini_structured.py  test_integration_verdict.py  test_keyleak_audit.py  test_logging.py  test_manifest.py  test_modes.py  test_openai_compat_structured.py  test_output_contract_plumbing.py  test_providers.py  test_registry_config.py  test_secret_safety_matrix.py  test_streaming_verdict.py  test_synthesizer.py  test_transport.py  test_verdict_edge_cases.py  test_verdict_schema.py  test_verdict_synthesis.py  test_vote_mode.py
