[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conclave"
version = "0.1.0"
description = "Bring-your-own-keys multi-model council CLI + library. Fan a prompt to N foundation models concurrently and merge their answers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Data Science & Engineering Experts, Inc." }]
keywords = ["llm", "multi-model", "council", "synthesis", "cli"]

dependencies = [
    "httpx>=0.28",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
conclave = "conclave.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/conclave"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
