[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# PyPI distribution name is `conclave-cli` because the PyPI name `conclave` is
# taken by an unrelated project (a blockchain client, not this one). The CLI
# command (`conclave`), the import package (`conclave`), and the repo all stay
# `conclave` — only the published *distribution* name differs. So users
# `pip install conclave-cli`, then run `conclave ...` / `from conclave import Council`.
name = "conclave-cli"
version = "0.3.0"
description = "Bring-your-own-keys multi-model council CLI + library. Fan a prompt to N foundation models concurrently and merge their answers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Data Science & Engineering Experts, Inc." }]
keywords = ["llm", "multi-model", "council", "synthesis", "cli"]

dependencies = [
    "httpx>=0.28",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/ernestprovo23/conclave"
Repository = "https://github.com/ernestprovo23/conclave"
Issues = "https://github.com/ernestprovo23/conclave/issues"
Changelog = "https://github.com/ernestprovo23/conclave/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
conclave = "conclave.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/conclave"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["conclave"]
branch = true

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long — ruff format handles wrapping
]

[tool.ruff.lint.isort]
known-first-party = ["conclave"]
